# rust-embed-resource-lib-bug

./: .editorconfig  Cargo.toml  icon.rc
