[package]
name = "rust-demo"
version = "0.1.0"
authors = ["noe132 <nnnnoe132@gmail.com>"]
edition = "2018"
build = "build.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
panic = "abort"

[dependencies]

[build-dependencies]
embed-resource = "1.6.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
